typedoc-theme: Random changes on custom typedoc theme

--- a/packages/typedoc-theme-client/styles/main.scss
+++ b/packages/typedoc-theme-client/styles/main.scss
@@ -7,6 +7,8 @@
 @import 'bootstrap';
 @import 'variables-bootstrap';
 
+@import 'typedoc/index';
+
 // Riba
 @import '~@ribajs/core';
 @import '~@ribajs/bs5';
