--- a/packages/typedoc-theme-client/scripts/components/navbar/navbar.component.scss
+++ b/packages/typedoc-theme-client/scripts/components/navbar/navbar.component.scss
@@ -1,3 +1,37 @@
 tsd-navbar {
-  display: block;
+  color: var(--color-toolbar-text);
+  background: var(--color-toolbar);
+  border-bottom: 1px solid var(--color-panel-divider);
+  transition: transform 0.3s linear;
+  a {
+    color: var(--color-toolbar-text);
+    text-decoration: none;
+    &.title {
+      font-weight: bold;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  .table-wrap {
+    display: table;
+    width: 100%;
+    height: 40px;
+  }
+  .table-cell {
+    display: table-cell;
+    position: relative;
+    white-space: nowrap;
+    line-height: 40px;
+    &:first-child {
+      width: 100%;
+    }
+  }
+  &.tsd-page-toolbar--hide {
+    transform: translateY(-100%);
+  }
+
+  .navbar-brand {
+    height: 36px;
+  }
 }
