--- a/packages/typedoc-theme-client/styles/_variables-theme.scss
+++ b/packages/typedoc-theme-client/styles/_variables-theme.scss
@@ -1,3 +1,8 @@
-// Links
+// Navbar
+$default-navbar-height: 58px;
 
+// Search
+$zindex-search-results: $zindex-tooltip + 5;
+
+// Links
 $link-decoration-color: $primary;
