--- a/packages/typedoc-theme-client/scripts/components/index.scss
+++ b/packages/typedoc-theme-client/scripts/components/index.scss
@@ -1,2 +1,5 @@
+@import "./footer/footer.component";
+@import "./header/header.component";
 @import "./navbar/navbar.component";
+@import "./navigation/navigation.component";
 @import "./search/search.component";
