--- a/packages/typedoc-theme-client/styles/_variables-bootstrap.scss
+++ b/packages/typedoc-theme-client/styles/_variables-bootstrap.scss
@@ -499,10 +499,10 @@ $border-radius-pill:          50rem;
 // scss-docs-end border-radius-variables
 
 // scss-docs-start box-shadow-variables
-$box-shadow:                  0 .5rem 1rem rgba($black, .15);
-$box-shadow-sm:               0 .125rem .25rem rgba($black, .075);
-$box-shadow-lg:               0 1rem 3rem rgba($black, .175);
-$box-shadow-inset:            inset 0 1px 2px rgba($black, .075);
+$box-shadow:                  none;
+$box-shadow-sm:               none;
+$box-shadow-lg:               none;
+$box-shadow-inset:            none;
 // scss-docs-end box-shadow-variables
 
 $component-active-color:      $white;
