--- a/packages/typedoc-theme-client/styles/main.scss
+++ b/packages/typedoc-theme-client/styles/main.scss
@@ -19,6 +19,9 @@
 // Custom bootstrap extensions
 @import 'extensions/index';
 
+// Layout styles
+@import 'layout';
+
 // Template styles
 @import 'templates/index';
 
