--- a/packages/typedoc-theme-client/scripts/components/search/search.component.pug
+++ b/packages/typedoc-theme-client/scripts/components/search/search.component.pug
@@ -1,8 +1,24 @@
 .search-group
-  span#tsd-search-field-addon
-    bs5-icon(src="/assets/iconset/svg/icon_search2.svg", size="16")
-  input.form-control#tsd-search-field(type='search', aria-label='Search', aria-describedby='tsd-search-field-addon', autocomplete="off", spellcheck="false")
+  button.btn.btn-icon#tsd-search-field-addon(rv-on-click="setFocus")
+    bs5-icon(src="/assets/iconset/svg/icon_search2.svg", size="16", direction="left")
+  input.form-control.rounded-pill#tsd-search-field(
+    type='search',
+    aria-label='Search',
+    aria-describedby='tsd-search-field-addon',
+    autocomplete="off",
+    spellcheck="false",
+    rv-value="query"
+    rv-on-input="onInput",
+    rv-on-focus="onFocus",
+    rv-on-blur="onBlur",
+    rv-on-keydown="onKeydown",
+    rv-on-keypress="onKeypress"
+  )
 
-ul.list-group.results.card.px-0.border-top-0
-  li.state.loading Preparing remote search server...
-  li.state.failure The remote search server is not available
+ul.list-group.results.card.px-0.border-top-0(rv-if="isReady")
+  li.list-group-item(rv-show="results | size | gt 0" rv-each-item="results", rv-add-class="item.classes")
+    a.tsd-kind-icon(rv-href="base | append item.url", rv-html="item.name")
+  li.list-group-item.disabled(rv-if="results | size | eq 0") No results...
+ul.list-group.results.card.px-0.border-top-0(rv-unless="isReady")
+  li.list-group-item.disabled(rv-show="isLoading", aria-disabled="true") Preparing remote search server...
+  li.list-group-item.disabled(rv-show="hasFailure", aria-disabled="true") The remote search server is not available
