--- a/packages/typedoc-theme-client/scripts/components/navbar/navbar.component.scss
+++ b/packages/typedoc-theme-client/scripts/components/navbar/navbar.component.scss
@@ -33,4 +33,12 @@ tsd-navbar {
   .navbar-brand {
     height: 36px;
   }
+
+  @include media-breakpoint-down(sm) {
+    &.search-has-focus {
+      .navbar-brand, bs5-theme-button {
+        display: none !important;
+      }
+    }
+  }
 }
