--- a/packages/typedoc-theme-client/scripts/components/search/search.component.pug
+++ b/packages/typedoc-theme-client/scripts/components/search/search.component.pug
@@ -1,5 +1,5 @@
-.search-group
-  button.btn.btn-icon#tsd-search-field-addon(rv-on-click="setFocus")
+.search-group.flex-nowrap.d-flex
+  button.btn.btn-icon.ps-4#tsd-search-field-addon(rv-on-click="setFocus")
     bs5-icon(src="/assets/iconset/svg/icon_search2.svg", size="16", direction="left")
   input.form-control.rounded-pill#tsd-search-field(
     type='search',
@@ -7,6 +7,7 @@
     aria-describedby='tsd-search-field-addon',
     autocomplete="off",
     spellcheck="false",
+    rv-element="fieldEl"
     rv-value="query"
     rv-on-input="onInput",
     rv-on-focus="onFocus",
@@ -15,7 +16,7 @@
     rv-on-keypress="onKeypress"
   )
 
-ul.list-group.results.card.px-0.border-top-0(rv-if="isReady")
+ul.list-group.results.card.px-0.border-top-0(rv-if="isReady" rv-element="resultsEl")
   li.list-group-item(rv-show="results | size | gt 0" rv-each-item="results", rv-add-class="item.classes")
     a.tsd-kind-icon(rv-href="base | append item.url", rv-html="item.name")
   li.list-group-item.disabled(rv-if="results | size | eq 0") No results...
