--- a/packages/typedoc-theme-client/scripts/components/index.scss
+++ b/packages/typedoc-theme-client/scripts/components/index.scss
@@ -1,5 +1,6 @@
 @import "./footer/footer.component";
 @import "./header/header.component";
+@import "./member-signatures/member-signatures.component";
 @import "./navbar/navbar.component";
 @import "./navigation/navigation.component";
 @import "./search/search.component";
