typedoc-theme: white/black border on dark/light theme for navbar/sidebar

--- a/packages/typedoc-theme-client/styles/_variables-bootstrap.scss
+++ b/packages/typedoc-theme-client/styles/_variables-bootstrap.scss
@@ -90,7 +90,9 @@ $theme-colors: (
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "dark":       $dark
+  "white":      $white,
+  "dark":       $dark,
+  "black":      $black,
 );
 // scss-docs-end theme-colors-map
 
