typedoc-plugin-remote-search: Replaced hostname and port plugin options with serverBaseUrl option and other cleanups

--- a/packages/typedoc-theme-client/styles/main.scss
+++ b/packages/typedoc-theme-client/styles/main.scss
@@ -7,11 +7,10 @@
 @import 'bootstrap';
 @import 'variables-bootstrap';
 
-@import 'typedoc/index';
-
 // Riba
 @import '~@ribajs/core';
 @import '~@ribajs/bs5';
+@import '~@ribajs/typedoc';
 
 // External Components
 @import 'components/index';
