chore(riba): Move riba typedoc module to typedoc-theme-client

--- a/packages/typedoc-theme-client/scripts/components/index.scss
+++ b/packages/typedoc-theme-client/scripts/components/index.scss
@@ -1,2 +1,7 @@
 @import "./footer/footer.component";
 @import "./header/header.component";
+@import "./member-signatures/member-signatures.component";
+@import "./navbar/navbar.component";
+@import "./navigation-secondary/navigation-secondary.component";
+@import "./navigation-primary/navigation-primary.component";
+@import "./search/search.component";
