--- a/packages/typedoc-theme-client/styles/original.scss
+++ b/packages/typedoc-theme-client/styles/original.scss
@@ -1,4 +1,4 @@
-// Based on https://github.com/TypeStrong/typedoc/blob/master/static/style.css
+// Original but modified TypeDoc style, see https://github.com/TypeStrong/typedoc/blob/master/static/style.css
 
 :root {
     /* Light */
@@ -172,7 +172,7 @@ body {
     margin: 0;
 }
 
-:root[data-theme="light"] {
+:root[data-theme="light"], :root[data-bs-theme="light"] {
     --color-background: var(--light-color-background);
     --color-background-secondary: var(--light-color-background-secondary);
     --color-background-warning: var(--light-color-background-warning);
@@ -211,7 +211,7 @@ body {
     --color-scheme: var(--light-color-scheme);
 }
 
-:root[data-theme="dark"] {
+:root[data-theme="dark"], :root[data-bs-theme="dark"] {
     --color-background: var(--dark-color-background);
     --color-background-secondary: var(--dark-color-background-secondary);
     --color-background-warning: var(--dark-color-background-warning);
@@ -854,98 +854,98 @@ a.tsd-index-link {
     margin: 2rem 0;
 }
 
-#tsd-search {
-    transition: background-color 0.2s;
-}
-#tsd-search .title {
-    position: relative;
-    z-index: 2;
-}
-#tsd-search .field {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 2.5rem;
-    height: 100%;
-}
-#tsd-search .field input {
-    box-sizing: border-box;
-    position: relative;
-    top: -50px;
-    z-index: 1;
-    width: 100%;
-    padding: 0 10px;
-    opacity: 0;
-    outline: 0;
-    border: 0;
-    background: transparent;
-    color: var(--color-text);
-}
-#tsd-search .field label {
-    position: absolute;
-    overflow: hidden;
-    right: -40px;
-}
-#tsd-search .field input,
-#tsd-search .title,
-#tsd-toolbar-links a {
-    transition: opacity 0.2s;
-}
-#tsd-search .results {
-    position: absolute;
-    visibility: hidden;
-    top: 40px;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
-}
-#tsd-search .results li {
-    padding: 0 10px;
-    background-color: var(--color-background);
-}
-#tsd-search .results li:nth-child(even) {
-    background-color: var(--color-background-secondary);
-}
-#tsd-search .results li.state {
-    display: none;
-}
-#tsd-search .results li.current,
-#tsd-search .results li:hover {
-    background-color: var(--color-accent);
-}
-#tsd-search .results a {
-    display: block;
-}
-#tsd-search .results a:before {
-    top: 10px;
-}
-#tsd-search .results span.parent {
-    color: var(--color-text-aside);
-    font-weight: normal;
-}
-#tsd-search.has-focus {
-    background-color: var(--color-accent);
-}
-#tsd-search.has-focus .field input {
-    top: 0;
-    opacity: 1;
-}
-#tsd-search.has-focus .title,
-#tsd-search.has-focus #tsd-toolbar-links a {
-    z-index: 0;
-    opacity: 0;
-}
-#tsd-search.has-focus .results {
-    visibility: visible;
-}
-#tsd-search.loading .results li.state.loading {
-    display: block;
-}
-#tsd-search.failure .results li.state.failure {
-    display: block;
-}
+// #tsd-search {
+//     transition: background-color 0.2s;
+// }
+// #tsd-search .title {
+//     position: relative;
+//     z-index: 2;
+// }
+// #tsd-search .field {
+//     position: absolute;
+//     left: 0;
+//     top: 0;
+//     right: 2.5rem;
+//     height: 100%;
+// }
+// #tsd-search .field input {
+//     box-sizing: border-box;
+//     position: relative;
+//     top: -50px;
+//     z-index: 1;
+//     width: 100%;
+//     padding: 0 10px;
+//     opacity: 0;
+//     outline: 0;
+//     border: 0;
+//     background: transparent;
+//     color: var(--color-text);
+// }
+// #tsd-search .field label {
+//     position: absolute;
+//     overflow: hidden;
+//     right: -40px;
+// }
+// #tsd-search .field input,
+// #tsd-search .title,
+// #tsd-toolbar-links a {
+//     transition: opacity 0.2s;
+// }
+// #tsd-search .results {
+//     position: absolute;
+//     visibility: hidden;
+//     top: 40px;
+//     width: 100%;
+//     margin: 0;
+//     padding: 0;
+//     list-style: none;
+//     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+// }
+// #tsd-search .results li {
+//     padding: 0 10px;
+//     background-color: var(--color-background);
+// }
+// #tsd-search .results li:nth-child(even) {
+//     background-color: var(--color-background-secondary);
+// }
+// #tsd-search .results li.state {
+//     display: none;
+// }
+// #tsd-search .results li.current,
+// #tsd-search .results li:hover {
+//     background-color: var(--color-accent);
+// }
+// #tsd-search .results a {
+//     display: block;
+// }
+// #tsd-search .results a:before {
+//     top: 10px;
+// }
+// #tsd-search .results span.parent {
+//     color: var(--color-text-aside);
+//     font-weight: normal;
+// }
+// #tsd-search.has-focus {
+//     background-color: var(--color-accent);
+// }
+// #tsd-search.has-focus .field input {
+//     top: 0;
+//     opacity: 1;
+// }
+// #tsd-search.has-focus .title,
+// #tsd-search.has-focus #tsd-toolbar-links a {
+//     z-index: 0;
+//     opacity: 0;
+// }
+// #tsd-search.has-focus .results {
+//     visibility: visible;
+// }
+// #tsd-search.loading .results li.state.loading {
+//     display: block;
+// }
+// #tsd-search.failure .results li.state.failure {
+//     display: block;
+// }
 
 #tsd-toolbar-links {
     position: absolute;
