--- a/packages/typedoc-theme-client/styles/components/bs5-sidebar.scss
+++ b/packages/typedoc-theme-client/styles/components/bs5-sidebar.scss
@@ -2,7 +2,7 @@ bs5-sidebar {
     margin-top: $default-navbar-height;
     max-height: calc(100vh - $default-navbar-height);
     overflow: auto;
-    tsd-navigation-primary {
+    tsd-module-menu {
         .dropdown {
             .dropdown-toggle, .dropdown-menu {
                 width: 100%;
